# embedded_rio

./: .gitignore  .gitmodules  Makefile  README.md  platformio.ini
config/: icins2021.h
scripts/: serial_plotter.py
src/: bmi085.cpp  bmi085.h  bmi08x.cpp  bmi08x.h  bmp388.cpp  bmp581.cpp  bmp581.h  config.h  debug.cpp  eskf_node.cpp  eskf_node.h  main.cpp  sd_logger.cpp  sd_logger.h  status_leds.cpp  telemetry.cpp  xwr6843aop.cpp  xwr6843aop.h
src/drivers/: bmi08x.cpp  bmi08x.h  bmp388.cpp  bmp388.h  xwr6843aop.cpp
src/filter/: eskf_node.cpp  eskf_node.h
src/io/: debug.cpp  debug.h  profiling.cpp  profiling.h  sd_logger.cpp  sd_logger.h  status_leds.cpp  status_leds.h  telemetry.cpp  telemetry.h
tools/replay/: CMakeLists.txt
tools/replay/scripts/: compare_ablation.py  compare_with_ulog.py  plot_runs.py  plot_style.py  run_ablation.sh
tools/replay/src/: log_reader.cpp  log_reader.h  replay.cpp
